tests/ui/impl-trait/issue-55872-2.stderr
error: type parameter `T` is part of concrete type but not used in parameter list for the `impl Trait` type alias
  --> $DIR/issue-55872-2.rs:13:20
   |
LL |     fn foo<T>() -> Self::E {
   |                    ^^^^^^^

error: type parameter `T` is part of concrete type but not used in parameter list for the `impl Trait` type alias
  --> $DIR/issue-55872-2.rs:13:20
   |
LL |     fn foo<T>() -> Self::E {
   |                    ^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 2 previous errors

